--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -75,7 +75,7 @@ display: flex;
 justify-content: center;
 align-items: center;
 border-radius: 50%;
-background-color: #fff;
+background-color: #000;
 box-shadow: .0625rem .0625rem .25rem #979798;
 }
 #col-fav .stamps__league li {
