chore: mercado pago script to improve payment

--- a/template/pages/#products.ejs
+++ b/template/pages/#products.ejs
@@ -19,3 +19,4 @@ _.breadcrumbs.push({
 %>
 
 <%- await include('@/view') %>
+<script src="https://www.mercadopago.com/v2/security.js" view="item"></script>
