--- a/template/pages/app/index.ejs
+++ b/template/pages/app/index.ejs
@@ -83,6 +83,7 @@ const logo = _.settings.logo
 
   <%- await include('@/json', { _ }) %>
   <%- await include('@/scripts') %>
+  <script src="https://www.mercadopago.com/v2/security.js" view="checkout"></script>
 </body>
 
 </html>
